--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -688,6 +688,12 @@
         &ndash; Necromancers may transform parts of their bodies with the power of energy from the Negative Material Plane. Once they learn the technique from a scroll, they may innately use the power of a Chilling Touch, Ghoul Touch, or Vampiric Touch.<br />.</p>
     </div>
   </div>
+  <h4 class="subheader">Component 660: </h4>
+  <div class="section">
+    <p><strong><em>Arcane Crafting by Gramarsalad</em></strong></p>
+    <p>This component allows all wizards to scribe scrolls, similar to the aTweaks component. Additionally, Transmuters will be able to brew potions, and Enchanters will be able to create magical wands.</p>
+    <p><strong>This component is very experimental and largely untested!</strong> I'm pretty sure it will not play with with Item Revisions and Spell Revisions. Use at your own risk! (Nothing should break; probably just the crafting skills might act weird.)</p>
+  </div>
   <h4 class="subheader">Component 690: </h4>
   <div class="section">
     <p><strong><em>Saving Throw Standardization</em></strong></p>
