--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -138,23 +138,31 @@
         <li> Crossbows are usable by everyone except druids. But no one can reach Grand Mastery except Marksmen (see component 300 below).</li>
       </ul>
       <p>Weapon use is slightly liberalized: all weapons are usable by clerics, but single-class clerics can only be proficient in traditional cleric weapons (the exception being kitted clerics' favored weapons.) Multiclass clerics primarily benefit from this: cleric/thieves can use thief weapons, and fighter/clerics can use any weapon.</p>
-      <p>Fighters start with 10 proficiency points and gain a new one every other level. But they cannot place more than one point in any weapon or style at first level; they cannot reach specialization (++) until 2nd level. Paladins, rangers, barbarians and rogues begin with 6 proficiency points, and gain a new one every 3 levels. Clerics begin with 5 proficiency points, and gain a new one every 6 levels. Druids begin with 5 proficiency points, and gain a new one every 5 levels. Wizards begin with 4 proficiency points, and can never move past their initial proficiencies (NB - dual-classing into a mage means no more weapon advancement <strong>at all!</strong>).</p>
-      <p>Trueclass fighters, and Kensai can attain Grandmastery (+++++) in any weapons they focus on. Wizard Slayers and paladins can attain High Mastery (++++) in any weapon. Berserkers, Barbarians, Rangers and rogues can attain Mastery (+++) with most weapons, but see below. Druids can attain Mastery (+++) with any weapons they can use. Clerics can attain specialization (++) with most weapons, but kitted clerics gain Mastery (+++) with their deity's chosen weapon (if you install the Divine Class Tweaks, see component #500 below).</p>
-      <p>Multiclass fighter/mages can attain High Mastery (++++) in any weapon but the only available style is Single-Weapon Style. Fighter/clerics and Fighter/thieves can attain High Mastery (++++) in any weapon they can use. Mage/thieves and cleric/thieves can attain Mastery (+++) with any weapon they can use. Cleric/Mages can attain Specialization (++) with any weapon they can use.</p>
-      <p>Beyond that, weapons are classed into certain themes: 
+      <p>Fighters start with 10 proficiency points and gain a new one every other level. But they cannot place more than one point in any weapon or style at first level; they cannot reach specialization (++) until 2nd level. Paladins, rangers, barbarians and rogues begin with 6 proficiency points, and gain a new one every 3 levels. Druids begin with 5 proficiency points, and gain a new one every 5 levels. Clerics begin with 5 proficiency points, and gain a new one every 6 levels. Wizards begin with 4 proficiency points, and can never move past their initial proficiencies (NB - dual-classing into a mage means no more weapon advancement <strong>at all!</strong>).</p>
       <ul>
-        <li> Ranger weapons: longsword, shortsword, scimitar, dagger, axe, spear, staff, and bows.</li>
-        <li> Barbarian weapons: axe, greatsword, club, spear, and mace.</li>
-        <li> Swashbuckling weapons: longsword, shortsword, scimitar, and dagger.</li>
-        <li> Stalker weapons: shortsword, dagger, and club.</li>
+        <li> Trueclass fighters and Kensai can attain Grandmastery (+++++) in any weapons they focus on. </li>
+        <li> Wizard Slayers and paladins can attain High Mastery (++++) in any melee weapon, and Mastery (+++) in missile weapons. </li>
+        <li> Berserkers, Barbarians, and Rangers can attain Mastery (+++) with most weapons, but see below. </li>
+        <li> Thieves and bards can generally attain Mastery (+++) with one-handed weapons. </li>
+        <li> Druids can attain Mastery (+++) with any weapons they can use. </li>
+        <li> Clerics can attain specialization (++) with most weapons, but kitted clerics will gain Mastery (+++) with their deity's chosen weapon if you install the Divine Class Tweaks (see component #500 below). </li>
+        <li> Multiclass fighter/mages can attain High Mastery (++++) in any weapon but the only available style is Single-Weapon Style. </li>
+        <li> Fighter/clerics and Fighter/thieves can attain High Mastery (++++) in any weapon they can use. </li>
+        <li> Mage/thieves and cleric/thieves can attain Mastery (+++) with any weapon they can use. </li>
+        <li> Cleric/Mages can attain Specialization (++) with any weapon they can use. </li>
       </ul>
-      <p> Rangers can place 1 extra point (so, up to Mastery) in ranger weapons. Berserkers, Barbarians, Barbarian Rangers, and Skalds can place 1 extra point (up to ++++) in barbarian weapons. Swashbucklers and Scouts can place 1 extra point (up to ++++) in swashbuckling weapons but 1 fewer point (up to ++) in other weapons. Corsairs and Harriers can place 2 extra points (up to +++++) in swashbuckling weapons. Stalkers and Assassins can place 1 extra point (up to ++++) in stalker weapons but 1 fewer point (up to ++) in other weapons.</p>
+      <p>Beyond that, weapons are classed into certain themes: <br />
+      &ndash; Ranger weapons: longsword, shortsword, scimitar, dagger, axe, spear, staff, and bows.<br />
+      &ndash; Barbarian weapons: axe, greatsword, club, spear, and mace.<br />
+      &ndash; Swashbuckling weapons: longsword, shortsword, scimitar, and dagger.<br />
+      &ndash; Stalker weapons: shortsword, dagger, and club.</p>
+      <p> Rangers can place 1 extra point (so, up to ++++) in ranger weapons. Berserkers, Barbarians, Barbarian Rangers, and Skalds can place 1 extra point (up to ++++) in barbarian weapons. Swashbucklers, Blades, and Scouts can place 1 extra point (up to ++++) in swashbuckling weapons but 1 fewer point (up to ++) in other weapons. Corsairs and Harriers can place 2 extra points (up to +++++) in swashbuckling weapons. Stalkers and Assassins can place 1 extra point (up to ++++) in stalker weapons but 1 fewer point (up to ++) in other weapons.</p>
       <div class="kit_description">
         <p>Proficiency benefits<br />
         &ndash; ** = +1 thac0, +1/2 APR<br />
         &ndash; *** = +2 thac0 and +1 damage total, +1/2 APR at level 11<br />
         &ndash; **** = +2 thac0 and +2 damage total, +1/2 APR at level 7<br />
-        &ndash; **** = +3 thac0 and +4 damage total, +1/2 APR at level 15</p>
+        &ndash; ***** = +3 thac0 and +4 damage total, +1/2 APR at level 15</p>
       </div>
       <p>On EE games, this component also slightly rebalances fighting styles (values represent the total combined benefit):</p>
       <div class="kit_description">
@@ -670,14 +678,14 @@
         &ndash; Transmuters automatically learn spells from the school of Alteration.<br />
         &ndash; Transmuters may use the "Earthen Grasp" cantrip, which causes tendrils from the ground to reach out and Entangle the target for 1 round (and Holding the taget frozen in place for that time if the target fails a saving throw).<br />
         &ndash; Transmuters can maintain the stability of their personal form, resisting hostile polymorph, petrification, and disintegration effects.<br />
-        &ndash; Beginning at 11th level, Transmuters may learn to animate a golem for short periods of time. Golems generally cannot be created on short notice; the effort involved is such that it will only be in existence for 60 seconds, and the Transmuter becomes fatigued and suffers a 1-second penalty to casting speed until the next rest period. A flesh golem may be animated at first; this upgrades to a clay golem at 14th level, and a stone golem at 18th level, and a juggernaut golem at 24th level.<br />.</p>
+        &ndash; Beginning at 11th level, Transmuters may learn to animate a golem for short periods of time. Ordinarily, golems cannot be created on such short notice; the effort involved limits their existence to 60 seconds, and the Transmuter becomes fatigued and suffers a 1-second penalty to casting speed until the next rest period. A flesh golem may be animated at first; this upgrades to a clay golem at 14th level, and a stone golem at 18th level, and a juggernaut golem at 24th level.<br />.</p>
     </div>
     <div class="kit_description">
       <p>NECROMANCER: A Mage who specializes in magic dealing with death, undeath, and energy from the Negative Material Plane. Necromancy is a disturbing art, reviled by most civilized practitioners and academies of magic. They experiment with the living and the dead, and create undead abominations that straddle the gap in between. With practice, some Necromancers eventually learn techniques to achieve immortality by changing their own bodies into the form of a lich.</p>
       <p>Abilities:<br />
         &ndash; Necromancers are the only wizards able to cast spells from the school of Necromancy.<br />
         &ndash; Necromancers automatically learn spells from the school of Necromancy.<br />
-        &ndash; Necromancers may use the "Stiffen Bones" cantrip, causes -1 penalties to thac0 and AC for 12 seconds (increasing to -2 penalties and being Slowed if the target fails a saving throw).<br />
+        &ndash; Necromancers may use the "Stiffen Bones" cantrip, which causes -1 penalties to thac0 and AC for 12 seconds (increasing to -2 penalties and being Slowed if the target fails a saving throw).<br />
         &ndash; Necromancers may transform parts of their bodies with the power of energy from the Negative Material Plane. Once they learn the technique from a scroll, they may innately use the power of a Chilling Touch, Ghoul Touch, or Vampiric Touch.<br />.</p>
     </div>
   </div>
@@ -725,8 +733,8 @@
         <li> Gnome: 19 Int, 17 Str, 16 Wis</li>
         <li> Half-orc: 19 Str, 17 Int, 16 Cha</li>
       </ul>
-      <p>This component also makes rangers unable to dual-class to cleric, unless they first find a special totem of the goddess Mielikki and use it to change their kit to a Woodscout of Mielikki.  Multiclass ranger/clerics will automatically begin as Woodscouts, except elves who begin as Forestwalkers of Rillifane Rallathil. (Note, these ranger/cleric changes are currently disabled in IWDEE and BG2EE. I am working on full compatibility.)</p>
-      <p>Finally, in addition to Woodscouts and Farestwalkers, this component introduces the six more multiclass kits to the game. These are not available at character generation, rather you must use a totem or item to adopt the kit. They are:</p>
+      <p>This component also makes rangers unable to dual-class to cleric, unless they first find a special totem of the goddess Mielikki and use it to change their kit to a Woodscout of Mielikki.  Multiclass ranger/clerics will automatically begin as Woodscouts, except elves who begin as Forestwalkers of Solonor Thelandira. (Note, in IWDEE and BG2EE, these ranger/cleric changes will only take effect if baldur.ini is set such that cleric/rangers receive all druid spells.)</p>
+      <p>Finally, in addition to Woodscouts and Forestwalkers, this component introduces nine more multiclass kits to the game. These are not available at character generation, rather you must use a totem or item to adopt the kit. They are:</p>
       <ul>
         <li> Elven Bladesinger - for elven fighter/mages.</li>
         <li> Spellfilcher - for mage/thieves.</li>
@@ -734,6 +742,9 @@
         <li> Misadventurer of Brandobaris - for halfling cleric/thieves.</li>
         <li> Hearthguard of Arvoreen - for halfling fighter/clerics.</li>
         <li> Alaghor of Clangeddin - for dwarven fighter/clerics.</li>
+        <li> Gloryblood of Tempus - for all fighter/clerics.</li>
+        <li> Monitor of Mystra - for cleric/mages.</li>
+        <li> Spellbender - for cleric/mages.</li>
       </ul>
       <div class="kit_description">
         <p>ELVEN BLADESINGER: Among the Elven nations there is an order of warriors who wield power matched by few.  Combining martial skill with magical prowess, Bladesingers have the resources to face nearly any threat.  They master the use of long blades wielded in one hand, keeping the other free for spellcasting.</p>
@@ -818,6 +829,7 @@
   </div>
   <h4 class="subheader">NPC Changes</h4>
   <div class="section">
+    <p><strong>Most of the NPC components have bee disabled here, because I have spun them off as a separate mod. For BG1 NPCs, look for "NPC_EE" which has more class/kit options, a bunch of bug-fixes, and lots of technical improvements.</em></p>
     <p><strong>Component 800: <em>Make Imoen a Spellfilcher (mage/thief)</em></strong><br />
       &ndash; Requires that the multiclass tweaks be installed.</p>
       &ndash; This will make Imoen a multiclass (and, necessarily, a half-elf) in BG1; but she will stay a dual-class in BG2 and only advance in mage levels. Consider the switch a result of Irenicus'... experiments.</p>
@@ -830,7 +842,7 @@
       &ndash; Requires that the Sniper and/or Scout kits be installed.</p>
     <p><strong>Component 825-826: <em>Make Branwen a Battleguard (cleric), or a Gloryblood (fighter/cleric)</em></strong><br />
       &ndash; Requires that the Divine Remix Battleguard and/or the multiclass tweaks be installed.</p>
-    <p><strong>Component 830: <em>Make Safana a Swashbuckler</em></strong></p>
+    <s><p><strong>Component 830: <em>Make Safana a Swashbuckler</em></strong></p>
     <p><strong>Component 835: <em>Make Ajantis an Inquisitor</em></strong></p>
     <p><strong>Component 840: <em>Make Montaron an Assassin</em></strong></p>
     <p><strong>Component 845-846: <em>Make Faldorn an Avenger, or a Purifier</em></strong><br />
@@ -840,7 +852,7 @@
     <p><strong>Component 855: <em>Make Garrick a Gallant</em></strong><br />
       &ndash; Requires that the Gallant kit be installed.</p>
     <p><strong>Component 860: <em>Make Alora a Misadventurer of Brandobaris (cleric/thief)</em></strong><br />
-      &ndash; Requires that the multiclass tweaks be installed.</p>
+      &ndash; Requires that the multiclass tweaks be installed.</p></s>
     <p><strong>Component 865: <em>Make Xan a Bladesinger (fighter/mage)</em></strong><br />
       &ndash; Requires that the multiclass tweaks be installed.</p>
     <p><strong>Component 870-872: <em>Make Viconia a Darkcloak, a Nightcloak, or a cleric/thief</em></strong><br />
