--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.0 </strong><br />
+  <p><strong> Version 5.1 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -246,6 +246,10 @@
 </div>
 <h2>Version History</h2>
 <div class="section">
+  <p><strong>Version 5.1 - March 2016</strong></p>
+  <ul>
+    <li>SoD and EET and EE 2.0 compatibility</li>
+  </ul>
   <p><strong>Version 5.0 - February 2016</strong></p>
   <ul>
     <li>major re-write and revival</li>
