--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.6 </strong><br />
+  <p><strong> Version 5.7 b1 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -830,6 +830,13 @@
       <p>This small component simply adds a -1 STR penalty to every 1-handed weapon.  The idea behind it is, your "STR" score measures your total bodily strength. If you attempt a feat of strength one-handed, naturally the result will not be as effective as if you used both arms. </p>
       <p>Note: this penalty stacks, so you will have a -2 penalty when dual-wielding. That weapon style is all about speed - not power! </p>
   </div>
+  <h4 class="subheader">Component 204: </h4>
+  <div class="section">
+    <p><strong><em>SBO: Concentration Checks</em></strong></p>
+      <p>This component enables the 'concentration' stat and allows spellcasters to roll to avoid interruption when they take damage during casting. The forumla is:</p>
+      <p><i>(1d20 + Luck) vs. (spell level + damage taken)</i></p> simply adds a -1 STR penalty to every 1-handed weapon.  The idea behind it is, your "STR" score measures your total bodily strength. If you attempt a feat of strength one-handed, naturally the result will not be as effective as if you used both arms. </p>
+      <p><b>Note:</b> this component can only be installed on EE games with the 2.0 or later patch. </p>
+  </div>
   <h4 class="subheader">Component 205: </h4>
   <div class="section">
     <p><strong><em>Hit Dice Overhaul (HDO): Revised Hit Point Progression</em></strong></p>
@@ -896,6 +903,12 @@
 </div>
 <h2>Version History</h2>
 <div class="section">
+  <p><strong>Version 5.7 - March 2017</strong></p>
+  <ul>
+    <li>new component: concentration checks</li>
+    <li>compatibility between WPO and FnP usability system</li>
+    <li>working on new component: no dual-wielding large weapons</li>
+  </ul>
   <p><strong>Version 5.6 - March 2017</strong></p>
   <ul>
     <li>re-wrote SBO - now completely dynamic!</li>
