--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.7 b1 </strong><br />
+  <p><strong> Version 5.7 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -93,14 +93,14 @@
     <p><strong><em>IWO: Functional Weapon Tweaks</em></strong></p>
     <p>This component makes tweaks to the base characteristics of various items:</p>
     <ul>
-      <li> Spears do 1d8+1 damage, since in BG games they are of the 2-handed variety (this is per PnP).</li>
+      <li> Spears do 1d10 damage, since in BG games they are of the 2-handed variety (this is per PnP).</li>
+      <li> Halberds do 2d5 damage.</li>
       <li> Quarterstaves get an inherent -1 AC bonus.</li>
-      <li> Flails do 1d8+1 damage.</li>
-      <li> Daggers get 1.5 base APR. (This includes throwing daggers.)</li>
+      <li> Daggers have 1.5 base APR. (This includes throwing daggers.)</li>
       <li> Light crossbows can be used 1-handed, with shields. Heavy crossbows have an overall +3 damage bonus to compensate.</li>
-      <li> Bolts do 1d6 damage (from light crossbows - they do 1d6+3 from heavy crossbows).</li>
+      <li> Bolts do 1d6 base damage (and thus, from heavy crossbows they do 1d6+3).</li>
       <li> Longbows and composite bows have their base APR reduced to 3/2 but do an extra +2 damage.</li>
-      <li> Arrows do 1d5 damage (from shortbows - the above means 1d5+2 from longbows).</li>
+      <li> Arrows do 1d5 damage (and thus, 1d5+2 from longbows).</li>
       <li> Sling bullets do blunt damage.</li>
       <li> Darts have 2 APR instead of 3.</li>
       <li> In the EE games, strength damage bonuses are removed from thrown daggers, darts, and slings.</li>
@@ -834,7 +834,7 @@
   <div class="section">
     <p><strong><em>SBO: Concentration Checks</em></strong></p>
       <p>This component enables the 'concentration' stat and allows spellcasters to roll to avoid interruption when they take damage during casting. The forumla is:</p>
-      <p><i>(1d20 + Luck) vs. (spell level + damage taken)</i></p> simply adds a -1 STR penalty to every 1-handed weapon.  The idea behind it is, your "STR" score measures your total bodily strength. If you attempt a feat of strength one-handed, naturally the result will not be as effective as if you used both arms. </p>
+      <p><i>(1d20 + Luck) vs. (spell level + damage taken)</i></p>
       <p><b>Note:</b> this component can only be installed on EE games with the 2.0 or later patch. </p>
   </div>
   <h4 class="subheader">Component 205: </h4>
